components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "ghcr.io/paperless-ngx/paperless-ngx:1.16"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
